classDiagram
    class Brand {
        - id: Long
        - name: String
        - products: List~Product~
    }

    class Product {
        - id: Long
        - name: String
        - price: Price
        - category: Category
        - brand: Brand
    }

    class Category {
        <<enumeration>>
        + TOP
        + OUTERWEAR
        + PANTS
        + SNEAKERS
        + BAG
        + HAT
        + SOCKS
        + ACCESSORIES
    }

    Brand "1" --> "0..*" Product : has
    Product "1" --> "1" Brand : belongs to
    Product "1" --> "1" Category : has
